provarAnt/00D190000000ZY2EAM/objects/CRMfusionDBR101__Scenario_Link__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__Hash_Index__c</fullName>
        <externalId>true</externalId>
        <label>Hash Index</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Hash__c</fullName>
        <externalId>true</externalId>
        <label>Hash</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Keys__c</fullName>
        <label>Keys</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario__c</fullName>
        <label>Scenario</label>
        <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
        <relationshipName>Scenario_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DupeBlocker Scenario Link (Deprecated)</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Scenario Links (Deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>